# prime-gen-load

./: Cargo.toml  generator.local.Dockerfile  instance.local.Dockerfile  sieve.local.Dockerfile  target-build-images
instance-service/: Cargo.toml  instance.Dockerfile
instance-service/src/: main.rs
k8s-deploy/: pod-generator.deploy.yaml
pod-generator/: Cargo.toml  generator.Dockerfile
pod-generator/src/: main.rs
prime-sieve/: Cargo.toml  sieve.Dockerfile
prime-sieve/src/: main.rs
