[package]
name = "instance-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.10", features = ["rustls"] }
anyhow = "1.0.45"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
json = "0.12"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.29"
tracing-actix-web = "0.5.0-beta.1"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.1", features = ["tracing-log"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }