[package]
name = "pod-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = { version = "4.0.0-beta.10", features = ["rustls"] }
actix-web = { version = "3.3.2", features = ["rustls"] }
anyhow = "1.0.45"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3"
json = "0.12"
kube = { version = "0.63.2", features = ["runtime","derive", "rustls-tls"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.29"
tracing-actix-web = "0.2.1"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.1"
