[package]
name = "prime-sieve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
chrono = { version = "0.4.19", features = ["serde"] }
json = "0.12"
rand = "0.8.4"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.1", features = ["tracing-log"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }